--- a/A1.html
+++ b/A1.html
@@ -1,110 +1,11 @@
 <!DOCTYPE html>
 <!-- saved from url=(0080)https://www.cse.iitd.ac.in/~rijurekha/col380_2024/openmp_pthread_assignment.html -->
-<html data-darkreader-mode="dynamic" data-darkreader-scheme="dark"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style class="darkreader darkreader--fallback" media="screen"></style><style class="darkreader darkreader--text" media="screen"></style><style class="darkreader darkreader--invert" media="screen">.jfk-bubble.gtx-bubble, .captcheck_answer_label > input + img, span#closed_text > img[src^="https://www.gstatic.com/images/branding/googlelogo"], span[data-href^="https://www.hcaptcha.com/"] > #icon, #bit-notification-bar-iframe, ::-webkit-calendar-picker-indicator, img.Wirisformula {
-    filter: invert(100%) hue-rotate(180deg) contrast(90%) !important;
-}</style><style class="darkreader darkreader--inline" media="screen">[data-darkreader-inline-bgcolor] {
-  background-color: var(--darkreader-inline-bgcolor) !important;
-}
-[data-darkreader-inline-bgimage] {
-  background-image: var(--darkreader-inline-bgimage) !important;
-}
-[data-darkreader-inline-border] {
-  border-color: var(--darkreader-inline-border) !important;
-}
-[data-darkreader-inline-border-bottom] {
-  border-bottom-color: var(--darkreader-inline-border-bottom) !important;
-}
-[data-darkreader-inline-border-left] {
-  border-left-color: var(--darkreader-inline-border-left) !important;
-}
-[data-darkreader-inline-border-right] {
-  border-right-color: var(--darkreader-inline-border-right) !important;
-}
-[data-darkreader-inline-border-top] {
-  border-top-color: var(--darkreader-inline-border-top) !important;
-}
-[data-darkreader-inline-boxshadow] {
-  box-shadow: var(--darkreader-inline-boxshadow) !important;
-}
-[data-darkreader-inline-color] {
-  color: var(--darkreader-inline-color) !important;
-}
-[data-darkreader-inline-fill] {
-  fill: var(--darkreader-inline-fill) !important;
-}
-[data-darkreader-inline-stroke] {
-  stroke: var(--darkreader-inline-stroke) !important;
-}
-[data-darkreader-inline-outline] {
-  outline-color: var(--darkreader-inline-outline) !important;
-}
-[data-darkreader-inline-stopcolor] {
-  stop-color: var(--darkreader-inline-stopcolor) !important;
-}
-[data-darkreader-inline-bg] {
-  background: var(--darkreader-inline-bg) !important;
-}</style><style class="darkreader darkreader--variables" media="screen">:root {
-   --darkreader-neutral-background: #131516;
-   --darkreader-neutral-text: #d8d4cf;
-   --darkreader-selection-background: #004daa;
-   --darkreader-selection-text: #e8e6e3;
-}</style><style class="darkreader darkreader--root-vars" media="screen"></style><style class="darkreader darkreader--user-agent" media="screen">html {
-    background-color: #181a1b !important;
-}
-html {
-    color-scheme: dark !important;
-}
-html, body {
-    background-color: #181a1b;
-}
-html, body {
-    border-color: #736b5e;
-    color: #e8e6e3;
-}
-a {
-    color: #3391ff;
-}
-table {
-    border-color: #545b5e;
-}
-::placeholder {
-    color: #b2aba1;
-}
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-    background-color: #404400 !important;
-    color: #e8e6e3 !important;
-}
-::-webkit-scrollbar {
-    background-color: #202324;
-    color: #aba499;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #454a4d;
-}
-::-webkit-scrollbar-thumb:hover {
-    background-color: #575e62;
-}
-::-webkit-scrollbar-thumb:active {
-    background-color: #484e51;
-}
-::-webkit-scrollbar-corner {
-    background-color: #181a1b;
-}
-::selection {
-    background-color: #004daa !important;
-    color: #e8e6e3 !important;
-}
-::-moz-selection {
-    background-color: #004daa !important;
-    color: #e8e6e3 !important;
-}</style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <title>Teaching</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.2">
-        <link href="./A1_files/bootstrap.min.css" rel="stylesheet"><style class="darkreader darkreader--sync" media="screen"></style>
-        <link href="./A1_files/group.css" rel="stylesheet"><style class="darkreader darkreader--sync" media="screen"></style>
+        <link href="./Teaching_files/bootstrap.min.css" rel="stylesheet">
+        <link href="./Teaching_files/group.css" rel="stylesheet">
         <link href="https://www.cse.iitd.ac.in/~rijurekha/col380_2024/style.css" rel="stylesheet&quot;">
 	<link rel="shortcut icon" href="https://www.cse.iitd.ac.in/~rijurekha/col380_2024/riju.JPG">
   
@@ -124,103 +25,10 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
-</style><style class="darkreader darkreader--sync" media="screen"></style>
+</style>
 
 
-<meta name="darkreader" content="7bbeead542cb403ab98022619cd4328f"><style class="darkreader darkreader--override" media="screen">.vimvixen-hint {
-    background-color: #7b5300 !important;
-    border-color: #d8b013 !important;
-    color: #f3e8c8 !important;
-}
-#vimvixen-console-frame {
-    color-scheme: light !important
-}
-::placeholder {
-    opacity: 0.5 !important;
-}
-#edge-translate-panel-body,
-.MuiTypography-body1,
-.nfe-quote-text {
-    color: var(--darkreader-neutral-text) !important;
-}
-gr-main-header {
-    background-color: #0f3a48 !important;
-}
-.tou-z65h9k,
-.tou-mignzq,
-.tou-1b6i2ox,
-.tou-lnqlqk {
-    background-color: var(--darkreader-neutral-background) !important;
-}
-.tou-75mvi {
-    background-color: #032029 !important;
-}
-.tou-ta9e87,
-.tou-1w3fhi0,
-.tou-1b8t2us,
-.tou-py7lfi,
-.tou-1lpmd9d,
-.tou-1frrtv8,
-.tou-17ezmgn {
-    background-color: #0a0a0a !important;
-}
-.tou-uknfeu {
-    background-color: #231603 !important;
-}
-.tou-6i3zyv {
-    background-color: #19576c !important;
-}
-div.mermaid-viewer-control-panel .btn {
-  fill: var(--darkreader-neutral-text);
-  background-color: var(--darkreader-neutral-background);
-}
-svg g rect.er {
-  fill: var(--darkreader-neutral-background) !important;
-}
-svg g rect.er.entityBox {
-  fill: var(--darkreader-neutral-background) !important;
-}
-svg g rect.er.attributeBoxOdd {
-  fill: var(--darkreader-neutral-background) !important;
-}
-svg g rect.er.attributeBoxEven {
-  fill-opacity: 0.8 !important;
-  fill: var(--darkreader-selection-background);
-}
-svg rect.er.relationshipLabelBox {
-  fill: var(--darkreader-neutral-background) !important;
-}
-svg g g.nodes rect, svg g g.nodes polygon {
-  fill: var(--darkreader-neutral-background) !important;
-}
-svg g rect.task {
-  fill: var(--darkreader-selection-background) !important;
-}
-svg line.messageLine0, svg line.messageLine1 {
-  stroke: var(--darkreader-neutral-text) !important;
-}
-div.mermaid .actor {
-  fill: var(--darkreader-neutral-background) !important;
-}
-.google-material-icons {
-    font-family: 'Google Material Icons' !important;
-}
-.google-symbols {
-    font-family: 'Google Symbols' !important;
-}
-.material-icons-extended {
-    font-family: 'Material Icons Extended' !important;
-}
-mitid-authenticators-code-app > .code-app-container {
-    padding-top: 1rem;
-    background-color: white !important;
-}
-iframe#unpaywall[src$="unpaywall.html"] {
-    color-scheme: light !important;
-}
-.ms-Icon {
-    font-family: 'FabricMDL2Icons' !important;
-}</style></head>
+<style id="VMst0.6491201741579724">#smgm_bgdiv{ text-align: center;position:fixed;top:0px;left:0px;z-index:9991;width:100%;height:100%;background-color:black;opacity:0.7;display:block;visibility:visible;}</style><style id="VMst0.9883394251855058">#smgm_dialogbox { vertical-align:middle;left:40px;top:15px;border:3px solid #000 !important;text-align:center !important;background-color:#fff !important;color:#000 !important;font-family:arial,verdana !important;z-Index:9999;position:fixed;width:18%;height:50%;margin-left:auto;margin-right:auto;display:block;visibility:visible;}</style><style id="VMst0.3594992123798597">.smgm_buttons { color:#000 !important;font: 90% 'arial','trebuchet ms',helvetica,sans-serif !important;background-color:#B2CCFF !important;border:2px solid !important;border-color: #E0EBFF #000 #000 #E0EBFF !important;vertical-align: top !important;}</style><style id="VMst0.19271989018802915">.smgm_table { margin-bottom:10px !important;border:0px !important;border-collapse:collapse !important;margin-left:auto;margin-right:auto; }</style><script src="chrome-extension://nngceckbapebfimnlniiiahkandclblb/content/fido2/page-script.js" id="bw-fido2-page-script"></script></head>
 
 <body><a name="assignment1"><h2>Assignment 1: Due on Feb 15, 2024</h2></a>
 In this assignment, you will develop two parallel implementations of
